--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "vee-validate": "<3.0.0",
+    "vuetify-loader": "^1.6.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
