--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0",
     "vee-validate": "<3.0.0",
+    "vue-sweetalert2": "^3.0.6",
     "vuetify-loader": "^1.6.0"
   },
   "devDependencies": {
