--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vuetify-loader": "^1.6.0"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/vuetify": "^1.11.2",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2"
