--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
+    "laravel-permissions": "^1.5.3",
     "nuxt": "^2.14.0",
+    "swiper": "^6.1.1",
     "vee-validate": "<3.0.0",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-sweetalert2": "^3.0.6",
     "vuetify-loader": "^1.6.0"
   },
