--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "laravel-permissions": "^1.5.3",
     "nuxt": "^2.14.0",
     "swiper": "^6.1.1",
+    "v-mask": "^2.2.3",
     "vee-validate": "<3.0.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-sweetalert2": "^3.0.6",
+    "vue2-filters": "^0.11.0",
+    "vue2-google-maps": "^0.10.7",
     "vuetify-loader": "^1.6.0"
   },
   "devDependencies": {
