--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "aos": "^3.0.0-beta.6",
+    "fb-sdk-wrapper": "^1.1.0",
     "laravel-permissions": "^1.5.3",
     "lodash": "^4.17.20",
     "nuxt": "^2.14.0",
